更改版权样式

--- a/WebContent/FeatureForm.html
+++ b/WebContent/FeatureForm.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Sobey--云平台服务-服务变更</title>
 <!-- Le styles -->
+<link href="css/cmop.css" rel="stylesheet">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="jquery-ui/css/overcast/jquery-ui-1.8.21.custom.css" rel="stylesheet">
@@ -666,14 +667,7 @@
 			</div>
 		</div>
 		<!-- Footer -->
-		<footer class="footer">
-		<div class="row show-grid">
-			<div class="span4">Copyright &copy; 2005-2012</div>
-			<div class="span4 offset4">
-				<a href="./Home.html" class="pull-right">返回首页</a>
-			</div>
-		</div>
-		</footer>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
 
 	</div>
 </body>
