--- a/WebContent/SupportJoinForm.html
+++ b/WebContent/SupportJoinForm.html
@@ -5,6 +5,7 @@
 <title>Sobey--云平台服务-接入服务申请</title>
 
 <!-- Le styles -->
+<link href="css/cmop.css" rel="stylesheet">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="jquery-ui/css/overcast/jquery-ui-1.8.21.custom.css" rel="stylesheet">
@@ -217,16 +218,8 @@
 			</div>
 		</div>
 
-
-		<!-- Footer -->
-		<footer class="footer">
-		<div class="row show-grid">
-			<div class="span4">Copyright &copy; 2005-2012</div>
-			<div class="span4 offset4">
-				<a href="./Home.html" class="pull-right">返回首页</a>
-			</div>
-		</div>
-		</footer>
+<!-- Footer -->
+		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
 
 	</div>
 </body>
