--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Sobey--云平台服务-登录</title>
 <!-- Le styles -->
+<link href="css/cmop.css" rel="stylesheet">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -138,16 +139,8 @@
 
 
 		<!-- Footer -->
-		<section>
-		<div class="page-header"></div>
-		<footer class="footer">
-		<div class="row show-grid">
-			<div class="span4">Copyright &copy; 2005-2012</div>
-			<div class="span4 offset4">
-				<a href="./Home.html" class="pull-right">返回首页</a>
-			</div>
-		</div>
-		</footer> </section>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+
 	</div>
 
 </body>
