更改计算资源申请时的显示方式(有两种);存储资源增加挂靠实例选择.javascript完全混乱,以后整理.

--- a/WebContent/SupportECSForm.html
+++ b/WebContent/SupportECSForm.html
@@ -126,8 +126,8 @@
 							</fieldset>
 							
 							<hr />
-							<div>
-								<a id="nextStep" class="btn btn-info offset1">下一步</a>
+							<div class="">
+								<a id="nextStep" class="btn btn-info offset1 ">下一步</a>
 							</div>
 						</div>
 
