更改logo文字;完成ECS添加服务器的JS函数(需进一步简化);删除目前不需要的页面.

--- a/WebContent/SupportES3Form.html
+++ b/WebContent/SupportES3Form.html
@@ -52,7 +52,7 @@
 		<!-- Header -->
 		<div class="page-header">
 			<h1>
-				Sobey<small>--云平台自服务</small>
+				Sobey<small>--云平台服务</small>
 			</h1>
 		</div>
 
