--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -31,7 +31,7 @@
 		<!-- Header -->
 		<div class="page-header">
 			<h1>
-				Sobey<small>--云平台自服务</small>
+				Sobey<small>--云平台服务</small>
 			</h1>
 		</div>
 
@@ -54,8 +54,8 @@
 		       <ul class="nav nav-list">
 		       
 		          <li class="nav-header">计算资源</li>
-		          <li><a href="./SupportPMForm.html"><i class="icon-book"></i>PM</a></li>
 		          <li><a href="./SupportECSForm.html"><i class="icon-pencil"></i>ECS</a></li>
+		          <li><a href="#"><i class="icon-book"></i>PM</a></li>
 		            <li class="divider"></li>
 		          <li class="nav-header">存储资源</li>
 		          <li><a href="./SupportES3Form.html"><i class="icon-cog"></i> ES3</a></li>
@@ -79,56 +79,13 @@
 					<h3>我的资源</h3>
 					<div class="row page-header">
 						<div class="span2">
-							<a href="#">EBS 4</a>
+							<a href="#">ECS 2 </a>
 						</div>
 						<div class="span2">
-							<a href="#">ECS 9 </a>
+							<a href="#">ES3 5</a>
 						</div>
-						<div class="span2">
-							<a href="#">EBS 4</a>
-						</div>
-						<div class="span2">
-							<a href="#">ECS 9 </a>
-						</div>
-						<div class="span2">
-							<a href="#">EBS 4</a>
-						</div>
-						<div class="span2">
-							<a href="#">ECS 9 </a>
-						</div>
-						<div class="span2">
-							<a href="#">EBS 4</a>
-						</div>
-						<div class="span2">
-							<a href="#">ECS 9 </a>
-						</div>
-						<div class="span2">
-							<a href="#">EBS 4</a>
-						</div>
-						<div class="span2">
-							<a href="#">ECS 9 </a>
-						</div>
-						 
 					</div>
-
 				</div>
-<!-- 
-				<div id="myResources">
-				<h3>我的资源</h3>
-				<ul class="breadcrumb">
-					<li><a href="#">EBS 1</a> <span class="divider">/</span></li>
-					<li><a href="#">EC3 3</a> <span class="divider">/</span></li>
-					<li><a href="#">EDO 11</a> <span class="divider">/</span></li>
-					<li><a href="#">运行实例 2</a> <span class="divider">/</span></li>
-					<li><a href="#">EBS 1</a> <span class="divider">/</span></li>
-					<li><a href="#">EC3 3</a> <span class="divider">/</span></li>
-					<li><a href="#">EDO 11</a> <span class="divider">/</span></li>
-					<li><a href="#">运行实例 2</a> <span class="divider">/</span></li>
-					<li><a href="#">EDO 11</a> <span class="divider">/</span></li>
-					<li><a href="#">运行实例 2</a> <span class="divider">/</span></li>
-				</ul>
-				</div>
- -->
 
 				<!-- Search -->
 				<form class="well well-small form-search " action="./SupportList.html">
