--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -25,7 +25,7 @@
 		<div class="page-header row show-grid">
 			<div class="span4">
 				<h1>
-					Sobey<small>--云平台自服务</small>
+					Sobey<small>--云平台服务</small>
 				</h1>
 			</div>
 			<div class="span6 offset2">
