--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -58,11 +58,12 @@
 		          <li><a href="#"><i class="icon-book"></i>PM</a></li>
 		            <li class="divider"></li>
 		          <li class="nav-header">存储资源</li>
-		          <li><a href="./SupportES3Form.html"><i class="icon-cog"></i> ES3</a></li>
+		          <li><a href="./SupportES3Form.html"><i class="icon-cog"></i>ES3</a></li>
 		            <li class="divider"></li>
 		          <li class="nav-header">网络资源</li>
-		          <li><a href="#"><i class="icon-user"></i> Profile</a></li>
-		          <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
+		          <li><a href="./ElasticIPsForm.html"><i class="icon-user"></i>EIP</a></li>
+		          <li><a href="./LoadBalancersForm.html"><i class="icon-cog"></i>ELB</a></li>
+		          <li><a href="./EFWForm.html"><i class="icon-cog"></i>EFW</a></li>
 		            <li class="divider"></li>
 		          <li class="nav-header">自定义申请</li>
 		          <li><a href="#"><i class="icon-adjust"></i> Profile</a></li>
@@ -84,6 +85,15 @@
 						<div class="span2">
 							<a href="#">ES3 5</a>
 						</div>
+						<div class="span2">
+							<a href="#">ELB 1 </a>
+						</div>
+						<div class="span2">
+							<a href="#">EIP 15</a>
+						</div>
+						<div class="span2">
+							<a href="#">EFW 3</a>
+						</div>
 					</div>
 				</div>
 
@@ -98,7 +108,8 @@
 						</div>
 
 						<div class="span4">
-							<label class="control-label">审核状态:</label> <select
+							<label class="control-label">审核状态:</label> 
+							<select
 								class="input-mini">
 								<option></option>
 								<option value="1">待审核</option>
@@ -139,7 +150,7 @@
 							<td>2012-12-08</td>
 							<td><span class="label label-important">待审核</span></td>
 							<td>
-								<a  href="./SupportDetail.html">查看</a> 
+								<a  href="./SupportECSDetail.html">查看</a> 
 								<a  href="./SupportForm.html">修改</a>
 							</td>
 						</tr>
