--- a/WebContent/EFWForm.html
+++ b/WebContent/EFWForm.html
@@ -160,7 +160,7 @@
 											id="resourceType" value="1" name="resourceType" />250M以下
 										</label> <label class="radio"> <input type="radio"
 											id="resourceType" value="2" name="resourceType"
-											checked="checked" /> 250以上
+											checked="checked" /> 250M以上
 										</label>
 									</div>
 								</div>
