--- a/WebContent/BugList.html
+++ b/WebContent/BugList.html
@@ -5,8 +5,8 @@
 <title>Sobey--云平台服务-服务变更</title>
 <!-- Le styles -->
 <link href="css/cmop.css" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap-responsive.css" rel="stylesheet">
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
      <script src="js/html5.js"></script>
