--- a/WebContent/EIPForm.html
+++ b/WebContent/EIPForm.html
@@ -5,8 +5,8 @@
 <title>Sobey--云平台服务-EIP申请</title>
 <!-- Le styles -->
 <link href="css/cmop.css" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap-responsive.css" rel="stylesheet">
 <link href="jquery-ui/css/overcast/jquery-ui-1.8.21.custom.css"
 	rel="stylesheet">
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
