--- a/WebContent/AuditForm.html
+++ b/WebContent/AuditForm.html
@@ -207,9 +207,11 @@
 					</div>
 					<hr>
 					<div>
-						<button class="btn btn-primary" type="submit">通过</button>
+						<button class="btn btn-primary" type="submit">保存</button>
+						<!-- 
 						<button class="btn">不通过但继续</button>
 						<button class="btn">不通过且退回</button>
+						 -->
 					</div>
 				</form>
 			</div>
@@ -217,7 +219,7 @@
 
 
 	<!-- Footer -->
-		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 
 	</div>
 
