--- a/WebContent/EFWList.html
+++ b/WebContent/EFWList.html
@@ -20,8 +20,8 @@
 		//聚焦指定的Tab
 		$("#support-tab").addClass("active");
 		
-		$("#eip-bar").addClass("active");
-		$("#eip-icon").addClass("icon-white");
+		$("#efw-bar").addClass("active");
+		$("#efw--icon").addClass("icon-white");
 		
 	});
 </script>
@@ -71,7 +71,7 @@
 			</div>
 
 			<div id="main" class="span10">
-				<a class="btn btn-info pager" href="./EIPForm.html">Create EIP</a>
+				<a class="btn btn-info pager" href="./EFWForm.html">Create EFW</a>
 
 				<!-- Search -->
 				<form class="well well-small form-search"
