--- a/WebContent/EIPForm.html
+++ b/WebContent/EIPForm.html
@@ -378,7 +378,7 @@
 		</div>
 
 		<!-- Footer -->
-		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 
 	</div>
 </body>
