--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -56,13 +56,12 @@
 					<li id="ecs-bar"><a href="./ECSList.html"><i id="ecs-icon" class="icon-hdd"></i>ECS</a></li>
 					<li class="divider"></li>
 					<li class="nav-header">存储资源</li>
-					<li id="es3-bar"><a href="./ES3List.html"><i id="es3-icon" class="icon-inbox"></i>
-							ES3</a></li>
+					<li id="es3-bar"><a href="./ES3List.html"><i id="es3-icon" class="icon-inbox"></i>ES3</a></li>
 					<li class="divider"></li>
 					<li class="nav-header">网络资源</li>
-					<li><a href="./EIPForm.html"><i id="eip-icon" class="icon-file"></i>EIP</a></li>
-					<li><a href="./EFWForm.html"><i id="efw-icon" class="icon-retweet"></i>EFW</a></li>
-					<li><a href="./ELBForm.html"><i id="elb-icon" class="icon-cog"></i>ELB</a></li>
+					<li id="eip-bar"><a href="./EIPList.html"><i id="eip-icon" class="icon-file"></i>EIP</a></li>
+					<li id="efw-bar"><a href="./EFWList.html"><i id="efw-icon" class="icon-retweet"></i>EFW</a></li>
+					<li id="elb-bar"><a href="./ELBList.html"><i id="elb-icon" class="icon-cog"></i>ELB</a></li>
 					<li class="divider"></li>
 					<li class="nav-header">自定义申请</li>
 					<li><a href="#"><i class="icon-user"></i> Profile</a></li>
@@ -212,7 +211,7 @@
 		</div>
 
 			<!-- Footer -->
-			<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+			<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 
 
 	</div>
