--- a/WebContent/FeatureDetail.html
+++ b/WebContent/FeatureDetail.html
@@ -172,7 +172,7 @@
 
 
 	<!-- Footer -->
-		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 
 	</div>
 
