--- a/WebContent/FeatureList.html
+++ b/WebContent/FeatureList.html
@@ -182,7 +182,7 @@
 			</div>
 		</div>
 <!-- Footer -->
-		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 
 
 	</div>
