--- a/WebContent/Home.html
+++ b/WebContent/Home.html
@@ -158,7 +158,7 @@
 		</div>
 
 		<!-- Footer -->
-		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 
 	</div>
 
