--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -139,7 +139,7 @@
 
 
 		<!-- Footer -->
-		<div id="footer" class="span12">Copyright &copy; 2005-2012</div>
+		<div id="footer" class="span12">Copyright &copy; 2005-2012 Sobey</div>
 
 	</div>
 
