修改EIP流程(多IP绑定多实例,未完成)

--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -22,26 +22,24 @@
 	<div class="container">
 
 		<!-- Header -->
-		<div class="page-header row show-grid">
+		<div class="page-header row">
 			<div class="span4">
 				<h1>
 					Sobey<small>--云平台服务</small>
 				</h1>
 			</div>
-			<div class="span6 offset2">
-				<form class="well form-inline" action="./Home.html">
-					<input type="text" id="email" class="input-small"
-						placeholder="Email"> <input type="password"
-						class="input-small" placeholder="Password"> <label
-						class="checkbox"> <input type="checkbox"> 记住我
-					</label>
-					<button type="submit" class="btn">登录</button>
-					<a class="btn btn-small btn-primary " href="./Regist.html">注册</a>
-				</form>
-			</div>
+
+			<form class="well well-small form-inline pull-right"
+				action="./Home.html">
+				<input type="text" id="email" class="input-small"
+					placeholder="Email"> <input type="password"
+					class="input-small" placeholder="Password"> <label
+					class="checkbox"> <input type="checkbox"> 记住我
+				</label>
+				<button type="submit" class="btn">登录</button>
+				<a class="btn btn-small btn-primary " href="./Regist.html">注册</a>
+			</form>
 		</div>
-
-
 
 		<div class="hero-unit">
 			<h1>Sobey 云平台</h1>
