--- a/WebContent/Home.html
+++ b/WebContent/Home.html
@@ -29,12 +29,13 @@
 	<div class="container">
 
 		<!-- Header -->
-		<div class="page-header">
-			<h1>
-				Sobey<small>--云平台服务</small>
-			</h1>
+		<div class=" ">
+		
+		<img alt="索贝云平台管理系统" src="./img/logo.jpg" >
+			 
 		</div>
 
+	<br>
 		<!-- Menu -->
 		<div id="menu">
 			<ul class="nav nav-tabs">
