ELB增加一个配置页面.

--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -60,8 +60,9 @@
 					<li class="divider"></li>
 					<li class="nav-header">网络资源</li>
 					<li id="eip-bar"><a href="./EIPList.html"><i id="eip-icon" class="icon-file"></i>EIP</a></li>
-					<li id="efw-bar"><a href="./EFWList.html"><i id="efw-icon" class="icon-retweet"></i>EFW</a></li>
 					<li id="elb-bar"><a href="./ELBList.html"><i id="elb-icon" class="icon-cog"></i>ELB</a></li>
+					<li id="esb-bar"><a href="#"><i id="esb-icon" class="icon-cog"></i>ESB</a></li>
+					<li id="efw-bar"><a href="./EFWList.html"><i id="efw-icon" class="icon-retweet"></i>EFW</a></li>
 					<li class="divider"></li>
 					<li class="nav-header">自定义申请</li>
 					<li><a href="#"><i class="icon-user"></i> Profile</a></li>
