--- a/WebContent/EIPForm.html
+++ b/WebContent/EIPForm.html
@@ -225,10 +225,10 @@ $(document).ready(function () {
 											<dd>
 												中国电信
 												<code>23.22.139.158</code>
-												挂载实例:
-												<code>ECS-DULHXCV</code>
 												DNS域名:
 												<code>www.google.com</code>
+												挂载实例:
+												<code>ECS-DULHXCV</code>
 											</dd>
 										</dl>
 									</div>
@@ -239,10 +239,10 @@ $(document).ready(function () {
 											<dd>
 												中国电信
 												<code>23.22.139.158</code>
-												挂载实例:
-												<code>ECS-DULHXCV</code>
 												DNS域名:
 												<code>www.google.com</code>
+												挂载实例:
+												<code>ECS-DULHXCV</code>
 											</dd>
 										</dl>
 									</div>
@@ -253,10 +253,10 @@ $(document).ready(function () {
 											<dd>
 												中国电信
 												<code>23.22.139.158</code>
-												挂载实例:
-												<code>ECS-DULHXCV</code>
 												DNS域名:
 												<code>www.google.com</code>
+												挂载实例:
+												<code>ECS-DULHXCV</code>
 											</dd>
 										</dl>
 									</div>
@@ -267,10 +267,24 @@ $(document).ready(function () {
 											<dd>
 												中国电信
 												<code>23.22.139.158</code>
-												挂载实例:
-												<code>ECS-DULHXCV</code>
 												DNS域名:
 												<code>www.google.com</code>
+												挂载实例:
+												<code>ECS-DULHXCV</code>
+											</dd>
+										</dl>
+									</div>
+									<div id="singleResources" class="row alert">
+										<button data-dismiss="alert" class="close">×</button>
+										<dl class="dl-horizontal">
+											<dt>基本信息:</dt>
+											<dd>
+												中国电信
+												<code>23.22.139.158</code>
+												DNS域名:
+												<code>www.google.com</code>
+												挂载实例:
+												<code>ECS-DULHXCV</code>
 											</dd>
 										</dl>
 									</div>
