修正输入框引导图的javascript函数

--- a/WebContent/SupportES3Form.html
+++ b/WebContent/SupportES3Form.html
@@ -171,7 +171,7 @@ $(document).ready(function () {
 					<div class="tab-content">
 
 						<!-- 第1步 -->
-						<div class="tab-pane fade in active span6" id="profile1">
+						<div class="span6 stepContext" >
 							<fieldset>
 								<legend>ES3申请</legend>
 
@@ -219,7 +219,7 @@ $(document).ready(function () {
 						</div>
 
 						<!-- 第2步 -->
-						<div class="tab-pane fade span8" id="profile2">
+						<div class="hidden stepContext"  >
 
 
 							<fieldset>
@@ -274,7 +274,7 @@ $(document).ready(function () {
 						</div>
 
 						<!-- 第3步 -->
-						<div class="tab-pane fade span8" id="profile3">
+						<div class="hidden stepContext"  >
 							<fieldset>
 								<legend>ES3申请详情</legend>
 
