--- a/WebContent/MDNList.html
+++ b/WebContent/MDNList.html
@@ -97,17 +97,11 @@
 				</form>
 
 				<table class="table table-striped table-bordered table-condensed">
-					<colgroup>
-						<col class="span6">
-						<col class="span2">
-						<col class="span2">
-						<col class="span2">
-					</colgroup>
 
 					<thead>
 						<tr>
-							<th>主题</th>
-							<th>创建日期</th>
+							<th>所属服务申请</th>
+							<th>标识符</th>
 							<th>审核状态</th>
 							<th>操作</th>
 						</tr>
@@ -115,54 +109,11 @@
 					<tbody>
 						<tr>
 							<td>liukai</td>
-							<td>2012-12-08</td>
+							<td>mdn-admin-12345678</td>
 							<td><span class="label label-important">待审核</span></td>
 							<td><a href="./FeatureDetail.html">查看</a> <a
 								href="./FeatureForm.html">修改</a></td>
 						</tr>
-						<tr>
-							<td>liukai</td>
-							<td>2012-12-08</td>
-							<td><span class="label label-warning">审核中</span></td>
-							<td><a href="./FeatureDetail.html">查看</a> <a
-								href="./FeatureForm.html">修改</a></td>
-						</tr>
-						<tr>
-							<td>liukai</td>
-							<td>2012-12-08</td>
-							<td><span class="label label-success">已审核</span></td>
-							<td><a href="./FeatureDetail.html">查看</a> <a
-								href="./FeatureForm.html">修改</a> <a href="./FeatureForm.html">变更</a></td>
-						</tr>
-						<tr>
-							<td>liukai</td>
-							<td>2012-12-08</td>
-							<td><span class="label label-important">待审核</span></td>
-							<td><a href="./FeatureDetail.html">查看</a> <a
-								href="./FeatureForm.html">修改</a></td>
-						</tr>
-						<tr>
-							<td>liukai</td>
-							<td>2012-12-08</td>
-							<td><span class="label label-important">待审核</span></td>
-							<td><a href="./FeatureDetail.html">查看</a> <a
-								href="./FeatureForm.html">修改</a></td>
-						</tr>
-						<tr>
-							<td>liukai</td>
-							<td>2012-12-08</td>
-							<td><span class="label label-important">待审核</span></td>
-							<td><a href="./FeatureDetail.html">查看</a> <a
-								href="./FeatureForm.html">修改</a></td>
-						</tr>
-						<tr>
-							<td>liukai</td>
-							<td>2012-12-08</td>
-							<td><span class="label label-important">待审核</span></td>
-							<td><a href="./FeatureDetail.html">查看</a> <a
-								href="./FeatureForm.html">修改</a></td>
-						</tr>
-
 
 					</tbody>
 				</table>
