--- a/WebContent/Regist.html
+++ b/WebContent/Regist.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -41,7 +41,6 @@
 					<p>
 						<h1>注册</h1>
 						 <a class="pull-right btn btn-success " href="./SignUp.html">	登录→ </a> 
-					 </p>
 				</div>
 				<form action="./Home.html" class="form-actions">
 
