--- a/WebContent/SignUp.html
+++ b/WebContent/SignUp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -116,16 +116,6 @@
 						<div class="controls">
 							
 							<select id="department"	name="department" class="input-medium">
-								<c:forEach var="map" items="${departmentMap }">
-									<option value="	<c:out value='${map.key}'/>" 
-										<c:if test="${user.department == map.key }">
-											selected="selected"
-										</c:if>
-									>
-										<c:out value="${map.value}" />
-									</option>
-								</c:forEach>
-	
 							</select>
 							
 						</div>
